kubernetes/apps/audiobookshelf/audiobookshelf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  replicas: 1
  selector:
    matchLabels:
      app: audiobookshelf
  template:
    metadata:
      labels:
        app: audiobookshelf
    spec:
      containers:
        - name: audiobookshelf
          image: ghcr.io/advplyr/audiobookshelf:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: audiobooks
              mountPath: /audiobooks
            - name: config
              mountPath: /config
            - name: metadata
              mountPath: /metadata
      volumes:
        - name: audiobooks
          persistentVolumeClaim:
            claimName: audiobookshelf-audiobooks
        - name: config
          persistentVolumeClaim:
            claimName: audiobookshelf-config
        - name: metadata
          persistentVolumeClaim:
            claimName: audiobookshelf-metadata
---
apiVersion: v1
kind: Service
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
spec:
  selector:
    app: audiobookshelf
  ports:
    - port: 80
