kubernetes/apps/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: audiobookshelf
  annotations:
    tailscale.com/funnel: "false"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Audiobookshelf"
    gethomepage.dev/description: "Audiobooks & podcasts"
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "audiobookshelf"
    gethomepage.dev/href: "https://audiobookshelf.${TAILNET_DOMAIN}"
    gethomepage.dev/pod-selector: "app=audiobookshelf"
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 80
  tls:
    - hosts:
        - audiobookshelf
